fixed spacing on trades

--- a/WebContent/css/trades.css
+++ b/WebContent/css/trades.css
@@ -35,7 +35,7 @@ a.trade,a.trade:hover,a.trade:active {
 	text-align: center;
 	text-decoration: none;
 	white-space: normal;
-	width: 95%;
+	width: 90%;
 }
 
 #trade-cloud a.trade-cloud-1 {
